--- a/style.css
+++ b/style.css
@@ -456,6 +456,57 @@ h1{
     background-position: center;
     background-size: cover;
 }
+.video{
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 50vw;
+    height: 80vh;
+    background-color:#EBD481;
+    z-index: 2;
+    border-radius: 2rem;
+    display: none;
+    flex-direction: column;
+}
+.video button{
+    position: absolute;
+    bottom: 1rem;
+    width: 130px;
+    height: 45px;
+    background-color: white;
+    border-radius: 2rem;
+}
+.frame{
+    width: 80%;
+    height: 70%;
+}
+.filtro{
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    display: none;
+}
+.equis{
+    position: absolute;
+    top: 20px;
+    right:20px;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
 .soporte{
     width: 100vw;
     height: 100vh;
