--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1071,6 +1071,11 @@ h1{
 }
 
 @media (max-width:1050px){
+    .video{
+     width:90vw;
+     height:30vh;
+        
+    }
     
     .nav-bar-container{
         grid-template-columns: 0.5fr 0.5fr;
