--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: SofiaPro;
     src: url('../fonts/SofiaProLight.ttf');
+}
 @font-face {
     font-family: Lustria;
     src: url('../fonts/Lustria-Regular.ttf');
